modified join html file

--- a/join.html
+++ b/join.html
@@ -62,7 +62,7 @@
 			  <li class="menu-item menu-item-has-children"><a href="contact.html">Contact Us</a></li>
 			  <li class="menu-item menu-item-has-children"><a href="join.html">Join Us</a></li>
 				<div class="mad-item">
-                  <a href="download.html" class="btn btn-small"><span>Order Online</span></a>
+                  <a href="download.html" class="btn btn-small"><span>Order Online now</span></a>
                 </div>
             </ul>
           </nav>
