--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!--================ Basic page needs ================-->
-  <title>Lazaro | Home</title>
+  <title>Lazaro Home Page</title>
   <meta charset="UTF-8">
   <meta name="author" content="">
   <meta name="keywords" content="">
