--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 
 <head>
   <!--================ Basic page needs ================-->
-  <title>Lazaro | Home</title>
+  <title>Lazaro | Download</title>
   <meta charset="UTF-8">
   <meta name="author" content="">
   <meta name="keywords" content="">
@@ -91,7 +91,7 @@
 			  <li class="menu-item menu-item-has-children"><a href="contact.html">Contact Us</a></li>
 			  <li class="menu-item menu-item-has-children"><a href="join.html">Join Us</a></li>
 				<div class="mad-item">
-                  <a href="download.html" class="btn btn-small"><span>Order Online</span></a>
+                  <a href="download.html" class="btn btn-small"><span>Buy Online</span></a>
                 </div>
             </ul>
           </nav>
